<resources>
    <string name="app_name">MediSight</string>
    <string name="page_title">Health Service</string>
    <string name="searchbar">Search Health Service</string>
    <string name="text_filter_1">Pharmacy</string>
    <string name="text_filter_2">Hospital</string>
    <string name="text_filter_3">Health Center</string>
    <string name="article">Article</string>
    <string name="search_article">Search Article</string>
    <string name="konteks">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="hot_article">HOT ARTICLE</string>
    <string name="medicine">Medicine</string>
    <string name="health_care">Health Care</string>
    <string name="content_description_media">content_description_media</string>
    <string name="article_title">Article Title</string>
    <string name="article_detail">Article Detail</string>
    <string name="author">Author</string>
    <string name="date">Date</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="find_your_medicine">Find Your Medicine</string>
    <string name="syrup">Syrup</string>
    <string name="capsule">Capsule</string>
    <string name="tablet">Tablet</string>
    <string name="ointment">Ointment</string>
    <string name="medicine_title">Medicine Title</string>
    <string name="medicine_detail">Medicine Detail</string>
    <string name="price">Price</string>
    <string name="detail">Detail</string>
    <string name="splash_screen">This is MediSight splash screen logo</string>
    <string name="welcome_description">Empowering you to see and heal instantly. With MediSight, scanning wounds is simple and insightful.</string>
    <string name="illustration_description">Illustration</string>
    <string name="title_text">We take care of it</string>
    <string name="subtitle_text">Our automation systems organize your folders, archive old files, and clear unnecessary ones. To continue, please provide access to your device\'s files. You\'ll have total control over which folders we can see.</string>
    <string name="skip">Skip</string>
    <string name="grant_access">Grant access</string>
    <string name="description_text">Please log in to your account or sign up now to enjoy a variety of features and conveniences we offer.</string>
    <string name="login_button">Log In</string>
    <string name="signup_button">Sign Up</string>
    <string name="preview_image_logo">This is MediSight on boarding logo</string>
    <string name="username_title">Username</string>
    <string name="username_hint">Enter your username</string>
    <string name="back_button_description">Go back</string>
    <string name="email_title">Email</string>
    <string name="email_hint">Enter your email</string>
    <string name="register_title">Register</string>
    <string name="password_title">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="confirm_password_title">Confirm your password</string>
    <string name="confirm_password_hint">Confirm your password</string>
    <string name="or_continue_with">Or continue with?</string>
    <string name="google_sign_in_button">This is Google Sign In</string>
    <string name="welcome_text">Welcome</string>
    <string name="sub_welcome_text">Sign In now and start using our app to easily scan and track your minor injuries. By creating an account, you can access personalized care tips, monitor your healing progress, and receive notifications for timely treatments.</string>
    <string name="login_title">Log In</string>
    <string name="forgot_password_title">Set Password</string>
    <string name="sub_forgot_text">Enter a new password to keep your account safe. Ensure it’s strong and unique for better protection.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="set_password_button">Confirm</string>
    <string name="set_up_profile_title">Profile</string>
    <string name="preview_profile">This is your image profile</string>
    <string name="edit_profile_image">Edit profile image</string>
    <string name="full_name_label">Full Name</string>
    <string name="full_name_hint">Enter your full name</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="phone_number_hint">Enter your phone number</string>
    <string name="date_of_birth_label">Date of Birth</string>
    <string name="date_of_birth_hint">DD/MM/YY</string>
    <string name="address_label">Address</string>
    <string name="address_hint">Enter your address</string>
    <string name="save_button">Save</string>
    <string name="email_invalid">Invalid input email</string>
    <string name="password_length_error">Make sure 8 characters minimum password</string>
    <string name="password_uppercase_error"><![CDATA[<string name=\"password_uppercase_error\">Password must contain at least one uppercase letter</string>]]></string>
    <string name="password_digit_error">Password must contain at least one number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_image">This is your profile</string>
    <string name="profile_title">Profile</string>
    <string name="profile_name">Kang Haerin</string>
    <string name="profile_phone">08212345678</string>
    <string name="profile_email">haerinlovedika@gmail.com</string>
    <string name="update_profile_button">Update Profile</string>
    <string name="logout_button">Log Out</string>
    <string name="update_button">Update</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="full_name_haerin">Kang Haerin</string>
    <string name="hello">Hello,</string>
    <string name="features">Features</string>
    <string name="medical_resume">Medical Resume</string>
    <string name="health_services">Health Services</string>
    <string name="button_setting_text">This is setting</string>
    <string name="see_all">See All</string>
    <string name="btn_medical_resume">This is button medical resume</string>
    <string name="btn_medicine">This is button medicine</string>
    <string name="btn_health_services">This is button health services</string>
    <string name="btn_article">This is button article</string>
    <string name="setting_title">Setting</string>
    <string name="language">Language</string>
    <string name="accessibility">Accessibility</string>
    <string name="medical_resume_description">After scanning, you’ll find a comprehensive overview of your previous injuries, treatments, and healing patterns. Keep everything in one place to monitor changes and ensure optimal care.</string>
    <string name="selected_filter">Tablet</string>
    <string name="home">Home</string>
    <string name="camera">Scan</string>
    <string name="finished">profile</string>
    <string name="error_empty_username">Please enter a username</string>
    <string name="error_empty_email">Please enter an email</string>
    <string name="error_empty_password">Please enter a password</string>
    <string name="error_empty_confirm_password">Please confirm your password</string>
    <string name="error_password_mismatch">Passwords do not match</string>
    <string name="registration_success">Registration successful</string>
    <string name="error_invalid_email">"Invalid email "</string>
    <string name="login_success">Login success</string>
    <string name="google_sign_in_toast">Sign in with google</string>
    <string name="error_invalid_credentials">Invalid credentials</string>
    <string name="analyze">Analyze</string>
    <string name="gallery">Gallery</string>
    <string name="images_des">This is your scan images</string>
    <string name="scan_label">Scan your Wounds</string>
    <string name="result">Result</string>
    <string name="analysis_label">Our Analysis Based On The Scan :</string>
    <string name="result_text">You are 99% Bruised</string>
    <string name="see_more">See more details and treatment?</string>
    <string name="save">Save to the history</string>
    <string name="chat_bot_title">AI Assistant</string>
    <string name="injury_minor_scratch">Luka Lecet</string>
    <string name="injury_burn">Luka Bakar</string>
    <string name="injury_normal">Luka Normal</string>
    <string name="injury_bruise">Luka Memar</string>
    <string name="injury_cut">Luka Sayatan</string>
    <string name="injury_minor_scratch_desc">Pertolongan pertama untuk luka lecet ringan</string>
    <string name="injury_burn_desc">Penanganan luka bakar sesuai tingkat keparahan</string>
    <string name="injury_normal_desc">Prosedur penanganan luka normal</string>
    <string name="injury_bruise_desc">Cara mengatasi luka memar</string>
    <string name="injury_cut_desc">Penanganan luka sayatan</string>
    <string name="chat_input_hint">Tulis pertanyaan Anda tentang luka...</string>
    <string name="send_button_description">Kirim pesan</string>
    <string name="fan_chat_bot">Go to chat bot</string>
</resources>