<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.UserPermissionActivity">

    <ImageView
        android:id="@+id/imageViewIllustration"
        android:layout_width="400dp"
        android:layout_height="360dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/illustration_description"
        android:src="@drawable/illustration_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/title_text"
        android:gravity="start"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/navy"
        android:layout_marginStart="12dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewIllustration" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_text"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_reguler"
        android:gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSkip"
            android:layout_width="90dp"
            android:layout_height="64dp"
            android:text="@string/skip"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_marginEnd="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGrantAccess"
            android:layout_width="250dp"
            android:layout_height="64dp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"
            android:text="@string/grant_access"
            style="@style/Widget.MaterialComponents.Button"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/navy"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
